fixed header font size on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,7 +55,7 @@ button:focus {
   font-family: "Paytone One", sans-serif;
   color: #4384c9;
   font-weight: 700;
-  font-size: 6rem;
+  font-size: 4rem;
 }
 
 .search-container {
